--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <a href="#contact" class="button-contact"><i aria-label="お問い合わせ" class="fa fa-envelope-o"></i></a>
             <div class="profile">
                 <h1 class="site-title abel uppercase text-center">Web Designer <span>Suguru Noto</span></h1>
-                <img src="./images/kadai_profile.png" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
+                <img src="./images/kadai_sepia_profile.png" alt="プロフィール写真" width="140" height="140" class="block-center profile-icon">
                 <p>東京都のIT企業でweb・アプリの情報設計を行っています。アクセス解析やユーザーテストを基にしたUIの改善活動もできます。</p>
             </div>
         </header>
